[package]
name = "virgo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.14"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
bcrypt = "0.16.0"
dotenvy = "0.15.7"
futures-util = { version = "0.3.31", features = ["sink"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-uuid-1", "array-impls"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }
