[package]
name = "virgo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.17", features = ["uuid"] }
async-graphql-axum = "7.0.17"
axum = { version = "0.8.4" } 
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
bcrypt = "0.16.0"
dotenvy = "0.15.7"
futures-util = { version = "0.3.31", features = ["sink"] }
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1", "array-impls"] }
tower-http = { version = "0.6.4", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
