[package]
name = "virgo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.17", features = ["uuid"] }
async-graphql-axum = "7.0.17"
axum = { version = "0.8.7" } 
axum-extra = { version = "0.10.3", features = ["typed-header"] }
bb8 = "0.9.1"
bb8-postgres = "0.9.0"
bcrypt = "0.16.0"
dotenvy = "0.15.7"
futures-util = { version = "0.3.31", features = ["sink"] }
jsonwebtoken = "9.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = { version = "0.7.15", features = ["with-uuid-1", "array-impls"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
